classDiagram
    direction TB

    class Employee {
        <<record>>
        EmployeeId id
        EmployeeNumber number
        String name
        Email email
        LocalDate hiredOn
        LocalDate retiredOn
        Set~Role~ roles
        activePeriod() DateRange
        isActiveOn(LocalDate) boolean
    }
    class Role {
        <<enum>>
        EMPLOYEE
        APPROVER
        HR
        ADMIN
    }
    class Department {
        <<record>>
        DepartmentId id
        DepartmentCode code
        String name
        DepartmentId parentId
        LocalDate abolishedOn
        isRoot() boolean
        isActiveOn(LocalDate) boolean
    }
    class Assignment {
        <<record>>
        EmployeeId employeeId
        DepartmentId departmentId
        DateRange period
    }
    class Managership {
        <<record>>
        DepartmentId departmentId
        EmployeeId employeeId
        DateRange period
    }
    class DateRange {
        <<value>>
        LocalDate from
        LocalDate toExclusive
        contains(LocalDate) boolean
        overlaps(DateRange) boolean
    }
    class OrganizationChart {
        <<domain service>>
        事実の導出のみを担う
        departmentOf(EmployeeId, LocalDate) Optional~Department~
        selfAndAncestorsOf(DepartmentId) List~Department~
        managerOf(DepartmentId, LocalDate) Optional~Managership~
    }
    class ApproverPolicy {
        <<approval コンテキスト>>
        BR-11 の業務ルールを適用
        resolve(EmployeeId, YearMonth) Approver
    }

    Employee "1" --> "1..*" Role
    Employee ..> DateRange : activePeriod
    Department --> "0..1" Department : parentId
    Assignment --> DateRange
    Managership --> DateRange
    OrganizationChart ..> Assignment
    OrganizationChart ..> Managership
    OrganizationChart ..> Department
    ApproverPolicy ..> OrganizationChart : 使う
